Fix image align in tables

--- a/less/common.less
+++ b/less/common.less
@@ -226,7 +226,7 @@ ul {
     margin-bottom: 20px;
 
     .image-wrapper {
-        margin: 0;
+        margin: 20px auto;
     }
 }
 
